--- a/.github/workflows/ftp.yml
+++ b/.github/workflows/ftp.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           curl --get \
             --data-urlencode 'chat_id=${{vars.TELEGRAM_DEPLOY_NOTICE_RECIPIENT_ID}}' \
-            --data-urlencode "text=🚀Start! ${{github.event.head_commit.message}} (${{github.event.head_commit.id}})" \
+            --data-urlencode "text=🚀Start in ${{github.event.repository.name}}! ${{github.event.head_commit.message}} (${{github.event.head_commit.id}})" \
             https://api.telegram.org/bot${{secrets.TELEGRAM_DEPLOY_NOTIFIER_BOT_TOKEN}}/sendMessage
 
       - name: 🚚 Get latest code
@@ -22,10 +22,10 @@ jobs:
       - name: Create env file
         run: |
           touch .env
-          echo DB_HOST=${{ vars.DB_HOST }} >> .env
-          echo DB_DATABASE=${{ vars.DB_DATABASE }} >> .env
-          echo DB_USERNAME=${{ vars.DB_USER }} >> .env
-          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
+          echo DB_HOST=${{ vars.TEST_FTP_STAGE_HOST }} >> .env
+          echo DB_DATABASE=${{ vars.TEST_FTP_STAGE_DB_NAME }} >> .env
+          echo DB_USERNAME=${{ vars.TEST_FTP_STAGE_DB_USER }} >> .env
+          echo DB_PASSWORD=${{ secrets.TEST_FTP_STAGE_DB_PASSWORD }} >> .env
           cat .env
 
       - name: Removing of extra files
@@ -36,15 +36,15 @@ jobs:
         id: ftp_deploy
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
-          server: ${{ vars.FTP_HOST }}
-          username: ${{ vars.FTP_USER }}
-          password: ${{ secrets.FTP_PASSWORD }}
+          server: ${{ vars.TEST_FTP_STAGE_HOST }}
+          username: ${{ vars.TEST_2_FTP_STAGE_FTP_USER }}
+          password: ${{ secrets.TEST_2_FTP_STAGE_FTP_PASSWORD }}
 
       - name: Sanding the result notification through Telegram
         run: |
           curl --get \
             --data-urlencode 'chat_id=${{vars.TELEGRAM_DEPLOY_NOTICE_RECIPIENT_ID}}' \
-            --data-urlencode 'text=✅SUCCESS! ${{github.event.head_commit.message}} (${{github.event.head_commit.id}})' \
+            --data-urlencode 'text=✅SUCCESS in ${{github.event.repository.name}}! ${{github.event.head_commit.message}} (${{github.event.head_commit.id}})' \
             https://api.telegram.org/bot${{secrets.TELEGRAM_DEPLOY_NOTIFIER_BOT_TOKEN}}/sendMessage
 
   debug:
@@ -57,5 +57,5 @@ jobs:
         run: |
           curl --get \
             --data-urlencode 'chat_id=${{vars.TELEGRAM_DEPLOY_NOTICE_RECIPIENT_ID}}' \
-            --data-urlencode 'text=🆘FAILED! ${{github.event.head_commit.message}} (${{github.event.head_commit.id}})' \
+            --data-urlencode 'text=🆘TASK IS FAILED in ${{github.event.repository.name}}! ${{github.event.head_commit.message}} (${{github.event.head_commit.id}})' \
             https://api.telegram.org/bot${{secrets.TELEGRAM_DEPLOY_NOTIFIER_BOT_TOKEN}}/sendMessage
