fix configs initiation - fix

--- a/.github/workflows/ftp.yml
+++ b/.github/workflows/ftp.yml
@@ -23,8 +23,8 @@ jobs:
         run: |
           touch .env
           echo DB_HOST=${{ vars.TEST_FTP_STAGE_HOST }} >> .env
-          echo DB_DATABASE=${{ vars.TEST_FTP_STAGE_DB_NAME }} >> .env
-          echo DB_USERNAME=${{ vars.TEST_FTP_STAGE_DB_USER }} >> .env
+          echo DB_NAME=${{ vars.TEST_FTP_STAGE_DB_NAME }} >> .env
+          echo DB_USER=${{ vars.TEST_FTP_STAGE_DB_USER }} >> .env
           echo DB_PASSWORD=${{ secrets.TEST_FTP_STAGE_DB_PASSWORD }} >> .env
           cat .env
 
