--- a/.github/workflows/ftp.yml
+++ b/.github/workflows/ftp.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Create env file
         run: |
           touch .env
-          echo DB_HOST=${{ vars.DB_HOST }} >> .env
-          echo DB_NAME=${{ vars.DB_NAME }} >> .env
-          echo DB_USER=${{ vars.DB_USER }} >> .env
-          echo DB_PASSWORD=${{ secrets.DB_PASSWORD }} >> .env
+          echo DB_HOST=${{ vars.PROD_DB_HOST }} >> .env
+          echo DB_NAME=${{ vars.PROD_DB_NAME }} >> .env
+          echo DB_USER=${{ vars.PROD_DB_USER }} >> .env
+          echo DB_PASSWORD=${{ secrets.PROD_DB_PASSWORD }} >> .env
           cat .env
 
       - name: Removing of extra files
