--- a/.github/workflows/ftp.yml
+++ b/.github/workflows/ftp.yml
@@ -36,8 +36,8 @@ jobs:
         id: ftp_deploy
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
-          server: ${{ vars.TEST_FTP_STAGE_HOST }}
-          username: ${{ vars.TEST_2_FTP_STAGE_FTP_USER }}
+          server: ${{ vars.PROD_FTP_HOST }}
+          username: ${{ vars.ADM_STAGE_FTP_USER }}
           password: ${{ secrets.TEST_2_FTP_STAGE_FTP_PASSWORD }}
 
       - name: Sanding the result notification through Telegram
